fixes mappers to set entity fields properly, adds cors support, adds response messages